--- a/Desktop/projects/Recreate AI/index.html
+++ b/Desktop/projects/Recreate AI/index.html
@@ -76,6 +76,24 @@
         </ul>
       </div>
     </nav>
+    <!-- Main Container -->
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="left-container">
+            <h4>The easiest video maker for social marketing</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat
+            </p>
+            <button type="button" class="btn btn-blue">Sign In</button>
+          </div>
+        </div>
+        <div class="col-lg-6">hello</div>
+      </div>
+    </div>
     <!--  jQuery and Bootstrap Bundle (includes Popper) -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
