--- a/Desktop/projects/Recreate AI/index.html
+++ b/Desktop/projects/Recreate AI/index.html
@@ -79,7 +79,23 @@
     <!-- Main Container -->
     <div class="container mt-5">
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-6 grid-spacing">
+          <h4>The easiest video maker for social marketing</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat
+          </p>
+          <button type="button" class="btn btn-blue">Sign In</button>
+        </div>
+        <div class="col-lg-6 grid-spacing">
+          <img src="./assets/woman-reading-book-evening-hom.png" />
+        </div>
+        <div class="col-lg-6 grid-spacing">
+          <img src="./assets/group-young-people-employee-wo.png" />
+        </div>
+        <div class="col-lg-6 grid-spacing">
           <div class="left-container">
             <h4>The easiest video maker for social marketing</h4>
             <p>
@@ -91,7 +107,6 @@
             <button type="button" class="btn btn-blue">Sign In</button>
           </div>
         </div>
-        <div class="col-lg-6">hello</div>
       </div>
     </div>
     <!--  jQuery and Bootstrap Bundle (includes Popper) -->
